--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,9 @@ html {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
@@ -39,10 +40,6 @@ p {
   font-size: 1.7rem;
 }
 
-.main {
-  height: calc(100vh - 70px);
-}
-
 a {
   color: #000;
   text-decoration: none;
@@ -59,22 +56,28 @@ li {
   list-style: none;
 }
 
-.container {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
+.main {
+  height: calc(100vh - 70px);
+}
 
-  .item {
+@media only screen and (min-width: 800px) {
+  .container {
     display: flex;
-    width: 50%;
+    height: 100%;
     flex-direction: column;
     align-items: center;
-    height: 95%;
-    box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.4);
-    padding: 25px;
-    border-radius: 4px;
+    justify-content: center;
+    padding: 20px;
+
+    .item {
+      display: flex;
+      width: 50%;
+      flex-direction: column;
+      align-items: center;
+      height: 95%;
+      box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.4);
+      padding: 25px;
+      border-radius: 4px;
+    }
   }
 }
